# Zeitmessung

./: CMakeLists.txt  Quelle.cpp  README.txt
Images/: corrFac.txt  shadingC.txt  shadingC3.txt
include/lib/: OpenCVConfig.cmake
